# primer-task-ci

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build-docker.yml  code-check.yml  code-quality.yml
